syntax = "proto3";

package protocols;
option go_package = "github.com/oscal-compass/compliance-to-policy-go/v2/api/proto/v1alpha1/";
import "api/proto/v1alpha1/messages.proto";

service PolicyEngine {
  rpc GetSchema(Empty) returns (GetSchemaResponse);
  rpc UpdateConfiguration(ConfigureRequest) returns (ConfigureResponse);
  rpc Generate(GenerateRequest) returns (GenerateResponse);
  rpc GetResults(Empty) returns (ResultsResponse);
}